--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,3 +1,5 @@
-preload = /home/feralsmurf/Downloads/hyprland-chan.jpg
-wallpaper = eDP-1, /home/feralsmurf/Downloads/hyprland-chan.jpg
+# preload = /home/feralsmurf/Downloads/Wallpapers/hyprland-chan.jpghyprland-chan.jpg
+# wallpaper = eDP-1, /home/feralsmurf/Downloads/Wallpapers/hyprland-chan.jpg
 
+preload = /home/feralsmurf/Downloads/Wallpapers/star.jpg
+wallpaper = eDP-1, /home/feralsmurf/Downloads/Wallpapers/star.jpg
